first big commit.

--- a/ProjectManagementSystem/appsettings.json
+++ b/ProjectManagementSystem/appsettings.json
@@ -4,6 +4,11 @@
     "DefaultConnection": "Server=VladLaptop\\SQLEXPRESS;Database=CorpProjectManagingSystem;Trusted_Connection=True; TrustServerCertificate=True; Encrypt=False"
   },
 
+  "MongoSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "ProjectManagement"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
